--- a/html/css/profile_mobilehome.css
+++ b/html/css/profile_mobilehome.css
@@ -252,6 +252,25 @@ button:hover {
         opacity: 1;
 }
 
+.topimageviewnav {
+        position: relative;
+        z-index: 3;
+        width: 100%;
+        margin-top: 20px;
+}
+
+.topimageviewnav-container {
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
+        flex-direction: column;
+}
 
 .journeyJS .topimageviewimage, .contact .topimageviewimage {
 	visibility: hidden;
@@ -362,7 +381,7 @@ button:hover {
 	text-align: left;
         margin: 0;
         flex-basis: auto;
-        height:125px;
+        /*height:125px;*/
 	
 }
 
@@ -433,7 +452,16 @@ button:hover {
 
 
 .journeyJS .topimageroll .topinnerbutton {
-        margin-top:25px;
+        margin-top:10px;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
 }
 
 .journeyJS .topinnerbutton .ui-btn {
@@ -445,6 +473,12 @@ button:hover {
         color:#e8e8e8;
         font-size:.90em;
 	padding:20px 62px;
+        width: 200px;
+        display: flex;
+        height: 50px;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
 }
 
 .journeyJS .topinnerbutton.transparent .ui-btn {
@@ -717,7 +751,23 @@ button:hover {
         border-bottom: 1px solid #aaa;
 }
 
-
+.toprollmenu-container {
+        text-align:center;
+        padding:1.5vh 1.5%;
+        height:7vh;
+        position:relative;
+        z-index:1;
+        overflow-x:auto;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
+}
 
 
 /*******Account*********/
@@ -1028,13 +1078,18 @@ button:hover {
 	.aboutMe .topimageviewoverlay-img {width:280px;height:740px;margin-left:55%;}
 
 	.journeyJS .topimageroll .topinnerbutton {margin-top:35px;}
+        .topimageviewnav-container { flex-direction: row;}
         .journeyJS .topmenurolldesk span {font-size:.80em;}
 }
 
 
 
 @media screen and (min-width: 768px) {
-
+        .topimageviewnav-container { 
+                -webkit-justify-content: left;
+                -ms-flex-pack: left;
+                justify-content: left;  
+        }
 	.account-navigation {margin-top: 15px; height: 100vh; border-right: 1px solid #ddd;}
         .account-navigation.is-active { width: 31%; }
         .account-navigation.is-active {
